@@ -18,7 +18,6 @@
 package org.apache.cassandra.db;
 
 import java.util.*;
-import java.security.MessageDigest;
 
 import com.google.common.collect.Iterators;
 
@@ -134,12 +133,6 @@ public class PartitionColumns implements Iterable<ColumnDefinition>
     public int hashCode()
     {
         return Objects.hash(statics, regulars);
-    }
-
-    public void digest(MessageDigest digest)
-    {
-        regulars.digest(digest);
-        statics.digest(digest);
     }
 
     public static Builder builder()
